Homework 02.11.2020-10